--- a/register.html
+++ b/register.html
@@ -24,9 +24,9 @@
       <div class="bb ze ki xn 2xl:ud-px-0 oo wf yf i">
         <div class="vd to/4 tc wf yf">
           <a href="index.html">
-            <img class="om" src="images/logo-light.svg" alt="Logo Light" />
-            <img class="xc nm" src="images/logo-dark.svg" alt="Logo Dark" />
+            <h1 class="fk vj zp kk wm wb">Virbela</h1>
           </a>
+        </div>
 
           <!-- Hamburger Toggle BTN -->
           <button class="po rc" @click="navigationOpen = !navigationOpen">
