--- a/register.html
+++ b/register.html
@@ -24,9 +24,9 @@
       <div class="bb ze ki xn 2xl:ud-px-0 oo wf yf i">
         <div class="vd to/4 tc wf yf">
           <a href="index.html">
-            <h1 class="fk vj zp kk wm wb">Virbela</h1>
+            <img class="om" src="" alt="Logo Light" />
+            <img class="xc nm" src="" alt="Logo Dark" />
           </a>
-        </div>
 
           <!-- Hamburger Toggle BTN -->
           <button class="po rc" @click="navigationOpen = !navigationOpen">
